# rapidhash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: crates.yaml  rust.yaml
benches/: basic.rs  hashmap.rs  vector.rs
docs/: CHEATSHEET.md  bench_hash_aarch64_apple_m1_max.txt  bench_hash_aarch64_apple_m1_max_native.txt  bench_hash_aarch64_aws_graviton3.txt  bench_hash_aarch64_aws_graviton3_native.txt  bench_hash_x86_64_amd_epyc_9R14.txt  bench_hash_x86_64_amd_epyc_9R14_native.txt  bench_hash_x86_64_intel_xeon_8488c.txt  bench_hash_x86_64_intel_xeon_8488c_native.txt  generate_charts.py  generate_table.py  run_benchmarks.sh
rapidhash/: Cargo.toml
rapidhash-bench/: Cargo.toml
rapidhash-bench-wasm/: Cargo.toml
rapidhash-bench-wasm/benches/: wasm.rs
rapidhash-bench-wasm/src/: lib.rs
rapidhash-bench/benches/: basic.rs  bench.rs  compiled.rs  emails.rs  hashmap.rs  iai-callgrind.rs  int.rs  object.rs  quality.rs  rng.rs  secrets.rs  vector.rs
rapidhash-bench/benches/bench/: basic.rs  compiled.rs  emails.rs  hashmap.rs  main.rs  rng.rs  state.rs
rapidhash-bench/benches/realworld/: distribution.rs  main.rs  urls-10000.txt
rapidhash-bench/src/: lib.rs
rapidhash-c/: Cargo.toml  build.rs
rapidhash-c/cpp/: rapidhash_rs.cpp  rapidhash_rs.hpp  rapidhash_v1.cpp  rapidhash_v1.h  rapidhash_v1.hpp  rapidhash_v1_wrapper.cpp  rapidhash_v2.hpp  rapidhash_v2_1.cpp  rapidhash_v2_1.hpp  rapidhash_v2_2.cpp  rapidhash_v2_2.hpp  rapidhash_v2_wrapper.cpp  rapidhash_v3.cpp  rapidhash_v3.hpp
rapidhash-c/src/: bindings.rs  lib.rs  rapidhash_v1_bindings.rs  rapidhash_v2_bindings.rs
rapidhash-msrv/: Cargo.toml  README.md
rapidhash-msrv/src/: lib.rs
rapidhash/src/: collections.rs  fast.rs  latest.rs  lib.rs  main.rs  mix.rs  quality.rs  read.rs  rng.rs
rapidhash/src/inner/: collections.rs  mix.rs  mod.rs  random_state.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  read_np.rs  seed.rs  seeding.rs  state.rs
rapidhash/src/inner/state/: global_state.rs  mod.rs  random_state.rs  seedable_state.rs
rapidhash/src/util/: assume.rs  chunked_stream_reader.rs  hints.rs  macros.rs  mix.rs  mod.rs  read.rs
rapidhash/src/v1/: mod.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  rapid_hasher_inline.rs  rng.rs  seed.rs
rapidhash/src/v2/: mod.rs  random_state.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  rapid_hasher_inline.rs  rng.rs  seed.rs
rapidhash/src/v3/: mod.rs  random_state.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  rng.rs  seed.rs
rapidhash/tests/: cli.rs  integration_test.rs
src/: lib.rs  main.rs  rapid_const.rs  rapid_file.rs
src/v1/: mod.rs  random_state.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  rapid_hasher_inline.rs  rng.rs
src/v2/: mod.rs  rapid_const.rs  rapid_file.rs  rapid_hasher.rs  rapid_hasher_inline.rs  rng.rs
