[workspace]
resolver = "2"
members = [ "rapidhash", "rapidhash-bench", "rapidhash-bench-wasm", "rapidhash-c"]
exclude = [ "rapidhash-msrv" ]

[workspace.dependencies]
rapidhash = { path = "rapidhash", default-features = false }
rapidhash-c = { path = "rapidhash-c" }
rapidhash-bench = { path = "rapidhash-bench" }

# aggressive optimizations for benchmark consistency
[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3

# aggressive optimizations for benchmark consistency
[profile.bench]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3
debug = true
debug-assertions = false
strip = false

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
manual_hash_one = "allow"
