[package]
name = "rapidhash-bench-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Produces a .wasm file

[[bench]]
name = "wasm"
harness = false

[features]
nightly = ["rapidhash/nightly", "foldhash/nightly"]

[dependencies]
rapidhash = { path = "../rapidhash", default-features = false }
foldhash = "0.2"
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "0.8.1", default-features = false, features = ["rayon", "cargo_bench_support"] }
wasmtime = "40.0.0"

[lints]
workspace = true
