[package]
name = "rapidhash"
version = "3.1.0"
edition = "2021"
publish = true
rust-version = "1.77.0"  # const first_chunk is our limitation
authors = ["Liam Gray <gmail@liamg.me>"]
description = "A rust port of rapidhash: an extremely fast, high quality, platform-independent hashing algorithm."
repository = "https://github.com/hoxxep/rapidhash"
documentation = "https://docs.rs/rapidhash"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hash", "hasher", "no-std", "rapidhash"]
categories = ["algorithms", "no-std"]
exclude = ["Cargo.lock", "fuzz"]

[lib]

# Test docs using cargo-docs. Command:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly docs -- --all-feature
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []  # enable std library for RapidHashMap and RapidHashSet helpers
rand = ["dep:rand", "std"]  # enable the rand library for initialising RandomState
rng = ["dep:rand_core"]  # enable RapidRng, a rand Rng-compatible fast PRNG using rapidrng
unsafe = []  # enable unsafe pointer arithmetic; this is used to check for bounds-check regressions

[dependencies]
rand = { version = "0.9.0", optional = true }
rand_core = { version = "0.9.1", default-features = false, optional = true }

[dev-dependencies]
rapidhash-c = { path = "../rapidhash-c" }
rand = "0.9.0"
tempfile = "3.14.0" # testing rapidhash_file
assert_cmd = "2.0.17"
